# claude-latex

./: .gitignore  README.md  docker-compose.yml
.claude/agents/: ai-engineer-reviewer.md  frontend-reviewer.md  security-reviewer.md  tester.md
backend/: .env.example  Dockerfile  manage_users.py  pyproject.toml  requirements.txt
backend/app/: config.py  constants.py  db.py  main.py
backend/app/agent/: graph.py  state.py
backend/app/agent/nodes/: analyze_latex.py  compile_pdf.py  modify_latex.py  parse_instruction.py  validate_latex.py
backend/app/middleware/: auth.py
backend/app/models/: chat.py  collaboration.py  document.py  files.py  review.py  user.py
backend/app/review/: benchmark_fetch.py  pipeline.py  review_logger.py  schemas.py
backend/app/review/agents/: base.py  clarity.py  meta_reviewer.py  novelty.py  rigor.py  soundness.py
backend/app/routers/: auth.py  chat.py  collaboration.py  compile.py  document.py  files.py  projects.py  review.py  venues.py  ws.py
backend/app/services/: auth.py  collaboration.py  compiler.py  diff.py  diff_summary.py  document_store.py  file_store.py  s3_store.py  venue_index.py
backend/app/utils/: latex_parser.py  reference_map.py  sanitizer.py  section_extractor.py
backend/app/workers/: celery_app.py  review_task.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: ActivityBar.tsx  AuthGuard.tsx  ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  CommentsPanel.tsx  DraftStatusChip.tsx  (+16 more)
latex-compiler/: Dockerfile  compile.sh
(+25 files in other folders)
